2008-07-28  Juri Linkov  <juri@jurta.org>

	* dired-aux.el (dired-do-isearch, dired-do-isearch-regexp):
	New functions.

	* dired.el (dired-mode-map): Bind dired-do-isearch to `M-s a C-s'
	and dired-do-isearch-regexp to `M-s a M-C-s'.  Add menu items.

2008-07-28  Seiji Zenitani  <zenitani@mac.com>

	* help-fns.el (help-C-file-name): Add .m (Obj-C code) for Cocoa port.
	* emacs-lisp/find-func.el (find-function-search-for-symbol): Likewise.

2008-07-28  Stephen Leake  <stephen_leake@stephe-leake.org>

	* progmodes/ada-mode.el (ada-mode): Clean up XEmacs handling.
	Add support for add-log.
	(ada-end-stmt-re): Fix bug - allow comment after 'when'.

	* progmodes/ada-prj.el: Delete 'main_unit' project variable.
	(ada-prj-save): Prompt for file name if not given.
	(ada-prj-display-page): Display casing exceptions.

	* progmodes/ada-xref.el: Add support for GNAT project files as Emacs
	Ada mode project files.  Delete 'main_unit' project variable;
	only need 'main'.  Simplify handling of default project values.
	Use cross-prefix consistently.
	(ada-find-executable): Throw error if not found.
	(ada-initialize-runtime-library): Improve error handling when
	gnatls not found.
	(ada-gnat-parse-gpr): New.
	(ada-treat-cmd-string): Allow process environment variables.
	(ada-xref-set-default-prj-values): Delete; replace with
	ada-default-prj-properties.
	(ada-parse-prj-file): Handle GNAT project files.
	(ada-parse-prj-file-1): New, factored out of ada-parse-prj-file.
	(ada-select-prj-file): New.
	(ada-get-absolute-dir-list): Allow project and environment variables.

2008-07-27  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.14.

	* net/tramp.el (tramp-perl-directory-files-and-attributes)
	(tramp-get-device): Make device number a cons cell.
	(tramp-convert-file-attributes): Make inode a cons cell.

	* net/trampver.el: Update release number.

2008-07-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* faces.el (face-set-after-frame-default): Treat 'ns as all other